Fixed arrow alignment issues in distributor-state-list

--- a/distributor-state-list/distributor-state-list.css
+++ b/distributor-state-list/distributor-state-list.css
@@ -49,8 +49,9 @@
     .listItemArrow
     {
         color: white;
-        margin-left: 70%;
-        font-size: 2.5vh;
+        margin-right: 5%;
+        margin-top: 45px;
+        height: 40%;
     }
 
     #arrow
@@ -83,8 +84,9 @@
     .listItemArrow
     {
         color: white;
-        margin-left: 80%;
-        font-size: 2.5vh;
+        margin-right: 5%;
+        margin-top: 3%;
+        height: 50%;
     }
 
     #arrow
@@ -117,8 +119,9 @@
     .listItemArrow
     {
         color: white;
-        margin-left: 80%;
-        font-size: 2.5vh;
+        margin-right: 5%;
+        margin-top: 1%;
+        height: 50%;
     }
 
     #arrow
@@ -138,7 +141,7 @@
     width: 99.5%;
     height: 12%;
     border-style: solid;
-    border-color: #ffd700;
+    border-color: rgb(255, 215, 0);
     display: flex;
     border-width: 0.5px;
 }
@@ -147,7 +150,8 @@
 {
     vertical-align: middle;
     margin-left: 10%;
-    font-family:monospace;
+    width: 100%;
+    font-family: "agenda",sans-serif;
     color: white;
     font-size: 2.5vh;
 }
